--- a/slurm/templates/slurm/index.html
+++ b/slurm/templates/slurm/index.html
@@ -1,15 +1,34 @@
 {# Load the tag library #}
 {% load bootstrap3 %}
+{% load static %}
 
 {# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
 
-{% if controllers_up %}
-<p>Controller Status -- UP</p>
-{% else %}
-<p>Controller Status -- DOWN</p>
-{% endif %}
+{% include 'slurm/navbar.html' %}
 
-<p>{{ nodes_reporting }} of {{ total_nodes }} nodes reporting.</p>
+<div class="container">
+  </br></br></br></br>
+
+  <div class="row">
+    <div class="col-md-2">
+		<img src="{% static 'slurm/slurm_logo.png' %}" alt="SLURM logo" height=150px>
+    </div>
+    <div class="col-md-10">
+      <div class="page-header">
+         <h1>SLURM</h1>
+         <p class="lead">Status and online services</p>
+      </div>
+    </div>
+  </div>
+
+  <h3>System status</h3>
+  {% if controllers_up %}
+  <b><p>Controller Status -- UP</p></b>
+  {% else %}
+  <b><p>Controller Status -- DOWN</p></b>
+  {% endif %}
+  <p>{{ nodes_reporting }} of {{ total_nodes }} nodes reporting.</p>
+</div>
 
