forgot to add in last commit

--- a/slurm/templates/slurm/index.html
+++ b/slurm/templates/slurm/index.html
@@ -1,10 +1,9 @@
-{# Load the tag library #}
+{# Load bootstrap3 #}
 {% load bootstrap3 %}
-{% load static %}
-
-{# Load CSS and JavaScript #}
 {% bootstrap_css %}
 {% bootstrap_javascript %}
+
+{% load static %}
 
 {% include 'slurm/navbar.html' %}
 
