--- a/slurm/templates/slurm/navbar.html
+++ b/slurm/templates/slurm/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">SLURM Dashboard</a>
+      <a class="navbar-brand" href="/slurm">SLURM Dashboard</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
@@ -17,4 +17,5 @@
     </div><!--/.nav-collapse -->
   </div>
 </nav>
+</br></br></br></br>
 
