--- a/slurm/templates/slurm/index.html
+++ b/slurm/templates/slurm/index.html
@@ -1,11 +1,5 @@
-{# Load bootstrap3 #}
-{% load bootstrap3 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
+{% include 'slurm/base.html' %}
 {% load static %}
-
-{% include 'slurm/navbar.html' %}
 
 <div class="container">
   <div class="row">
