--- a/slurm/templates/slurm/node_list.html
+++ b/slurm/templates/slurm/node_list.html
@@ -6,23 +6,6 @@
 
 <div class=container>
 	<h1>Nodes</h1>
-	<table class="table table-hover">
-		<thead>
-			{% for field in fields %}
-				<th>{{field}}</th>
-			{% endfor %}
-		</thead>
-		<tbody>
-			{% for node_field in node_data %}
-				{% if node_field == "!tr_start" %}
-					<tr>
-				{% elif node_field == "!tr_stop" %}
-					</tr>
-				{% else %}
-					<td>{{ node_field }}</td>
-				{% endif %}
-			{% endfor %}
-		</tbody>
-	</table>
+	{% include "slurm/dynamic_table.html" %}
 </div>
 
