--- a/slurm/templates/slurm/base.html
+++ b/slurm/templates/slurm/base.html
@@ -15,8 +15,8 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-		<li><a href="nodes">Nodes</a></li>
-		<li><a href="jobs">Jobs</a></li>
+		<li><a href="/slurm/nodes">Nodes</a></li>
+		<li><a href="/slurm/jobs">Jobs</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
