move to non-django copy of bootstrap, replace theme

--- a/slurm/templates/slurm/data-table.html
+++ b/slurm/templates/slurm/data-table.html
@@ -1,7 +1,9 @@
 {% include "slurm/base.html" %}
 
+{% block body %}
 <div class=container>
 	<h1>{{page_name}}</h1>
 	{{dynamic_table|safe}}
 </div>
+{% endblock %}
 
