--- a/slurm/templates/slurm/base.html
+++ b/slurm/templates/slurm/base.html
@@ -10,7 +10,7 @@
     <title>SLURM Dashboard</title>
 
     <!-- Bootstrap -->
-	<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
