add config options

--- a/slurm/templates/slurm/base.html
+++ b/slurm/templates/slurm/base.html
@@ -39,6 +39,7 @@
     		<li><a href="/slurm/nodes">Nodes</a></li>
     		<li><a href="/slurm/jobs">Jobs</a></li>
           </ul>
+		  {% include 'slurm/site/navbar-links.html' %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
