--- a/slurm/templates/slurm/index.html
+++ b/slurm/templates/slurm/index.html
@@ -15,6 +15,8 @@
     </div>
   </div>
 
+  {% include 'slurm/site/site-description.html' %}
+
   <h3>System status</h3>
   {% if controllers_up %}
   <b><p>Controller Status -- UP</p></b>
