defer slurm_ping to ClusterSnapshot

--- a/slurm/templates/slurm/index.html
+++ b/slurm/templates/slurm/index.html
@@ -23,7 +23,7 @@
   {% else %}
   <b><p>Controller Status -- DOWN</p></b>
   {% endif %}
-  <p>{{ nodes_reporting }} of {{ total_nodes }} nodes reporting.</p>
+  <p>{{ nodes_alive }} of {{ nodes_total }} nodes reporting.</p>
 </div>
 {% endblock %}
 
