--- a/slurm/templates/slurm/base.html
+++ b/slurm/templates/slurm/base.html
@@ -36,14 +36,27 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-    		<li><a href="/slurm/nodes">Nodes</a></li>
-    		<li><a href="/slurm/jobs">Jobs</a></li>
+    		    <li><a href="/slurm/nodes">Nodes</a></li>
+            <li><a href="/slurm/jobs">Jobs</a></li>
           </ul>
+          <form class="navbar-form navbar-left" role="search" onsubmit="return doSearch();">
+            <div class="form-group">
+              <input id="search_string" class="form-control" placeholder="Search for jobs/nodes..." type="text">
+            </div>
+          </form>
 		  {% include 'slurm/site/navbar-links.html' %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
     </br></br></br></br>
+
+    <script type="text/javascript">
+    function doSearch() {
+      var search_string = document.getElementById("search_string").value;
+      location = '/slurm/search/?str=' + search_string;
+      return false;
+    }
+    </script>
   
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   	<script src="{% static 'jquery/jquery-3.2.1.min.js' %}"></script>
